<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_text_subject_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"

    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/main_text_subject_name"

        android:textSize="20sp"

    />

    <Button
        android:id="@+id/main_button_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/main_button_access_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_access_message"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_button_create_password"
        android:layout_marginBottom="3dp"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/main_button_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_change_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_create_password"
        android:layout_marginTop="3dp"
        android:visibility="invisible"
        />

    <ProgressBar
        android:id="@+id/main_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

<!--
    <Switch
        android:id="@+id/main_switch_password_mode"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        />

    <TextView
        android:id="@+id/main_textview_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_switch_password_mode"
        android:layout_marginTop="10dp"
        android:text="@string/current_pass_mode"
        />-->


</androidx.constraintlayout.widget.ConstraintLayout>